--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.html",
   "scripts": {
     "dev": "gulp dev",
+    "prod": "gulp BuildProd",
     "esbuild": "esbuild --bundle app/src/js/index.js"
   },
   "repository": {
@@ -27,10 +28,12 @@
     "del": "^5.1.0",
     "esbuild": "^0.3.5",
     "gulp": "^4.0.2",
+    "gulp-imagemin": "^7.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.1.0",
+    "imagemin-pngquant": "^9.0.2",
     "node-notifier": "^7.0.0",
     "node-sass": "^4.14.1",
     "postcss-preset-env": "^6.7.0",
